test/types/records/recursive/generic-indirect.good
generic-indirect.chpl:8: error: record 'B(int(64))' cannot contain a recursive field 'a' whose type 'A' contains 'B(int(64))'
